# sangkuriang-ideal-solver

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: case1_single_soliton.txt  case2_two_solitons.txt  case3_collision.txt  case4_three_solitons.txt
src/sangkuriang_ideal/: __init__.py  cli.py
src/sangkuriang_ideal/core/: __init__.py  initial_conditions.py  solver.py
src/sangkuriang_ideal/io/: __init__.py  config_manager.py  data_handler.py
src/sangkuriang_ideal/utils/: __init__.py  logger.py  timer.py
src/sangkuriang_ideal/visualization/: animator.py
