[tool.poetry]
name = "sangkuriang-ideal-solver"
version = "0.0.7"
description = "Idealized Korteweg-de Vries soliton solver with pseudo-spectral methods"
authors = [
    "Dasapta E. Irawan",
    "Sandy H.S. Herho",
    "Faruq Khadami",
    "Iwan P. Anwar"
]
license = "WTFPL"
readme = "README.md"
packages = [{include = "sangkuriang_ideal", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = ">=1.20.0"
scipy = ">=1.7.0"
matplotlib = ">=3.3.0"
netCDF4 = ">=1.5.0"
tqdm = ">=4.60.0"
numba = ">=0.53.0"

[tool.poetry.group.dev.dependencies]
black = ">=22.0.0"

[tool.poetry.scripts]
sangkuriang = "sangkuriang_ideal.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
